--- a/about.html
+++ b/about.html
@@ -11,18 +11,19 @@ body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
-<body style= "background-color: #ff9100">
+<body style= "background-color: #e76d80">
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:75em">
+<div class="w3-content" style="max-width:100em">
 
 <!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:128px 16px" style= "color:#262b2a">
-  <h1 class="w3-xlarge" style= "color:#262b2a">MOTION GRAPHIC DESIGNER</h1>
-  <h1 style= "color:#000000">ARUSHI KOTHARI</h1>
+<header class=" w3-center" style="padding:128px 16px; margin-bottom:16px; background:linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)
+), url(./flowerbg.jpg) no-repeat scroll top center; background-size:cover; -webkit-filter:blur(0px); filter:blur(0px); height:calc(80% + 2 * 0px); left:0px; top:0px; width:calc(100% + 2 * 0px)" >
+  <h1 class="w3-xlarge" style= "color:#E6E6E6">MOTION GRAPHIC DESIGNER</h1>
+  <h1 style= "color:#FFFFFF">ARUSHI KOTHARI</h1>
   
-  <div class="w3-padding-32" style= "color:#000000">
-    <div class="w3-bar w3-border" style= "border-color:#262b2a !important">
+  <div class="w3-padding-32" style= "color:#E6E6E6">
+    <div class="w3-bar w3-border" style= "border-color:#E6E6E6 !important">
       <a href="./about.html" class="w3-bar-item w3-button w3-light-grey" >About</a>
       <a href="./index.html" class="w3-bar-item w3-button">Portfolio</a>
       <a href="http://blog.arushikothari.com" class="w3-bar-item w3-button">Blog</a>
