--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1 {font-family: "Raleway", Arial, sans-serif}
-h1 {letter-spacing: 6px}
+h1 {letter-spacing: 3px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
-<body style= "background-color: #ff9100">
+<body style="background:#e76d80">
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:75em">
+<div class="w3-content" style="max-width:100em; padding-top:0px">
 
 <!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:128px 16px" style= "color:#262b2a">
-  <h1 class="w3-xlarge" style= "color:#262b2a">MOTION GRAPHIC DESIGNER</h1>
-  <h1 style= "color:#000000">ARUSHI KOTHARI</h1>
+<header class="w3-center" style="padding:128px 16px; margin-bottom:16px; background:linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)
+), url(./flowerbg.jpg) no-repeat scroll top center; background-size:cover; -webkit-filter:blur(0px); filter:blur(0px); height:calc(80% + 2 * 0px); left:0px; top:0px; width:calc(100% + 2 * 0px)" >
+  <h1 class="w3-xlarge" style= "color:#e6e6e6;">MOTION GRAPHIC DESIGNER</h1>
+  <h1 style= "
+  color:#ffffff;"><b>ARUSHI KOTHARI</b></h1>
   
-  <div class="w3-padding-32" style= "color:#000000">
-    <div class="w3-bar w3-border" style= "border-color:#262b2a !important">
+  <div class="w3-padding-32" style= "color:#e6e6e6">
+    <div class="w3-bar w3-border" style= "border-color:#e6e6e6 !important">
       <a href="./about.html" class="w3-bar-item w3-button" >About</a>
       <a href="./index.html" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
       <a href="http://blog.arushikothari.com/" class="w3-bar-item w3-button">Blog</a>
@@ -33,7 +35,7 @@ h1 {letter-spacing: 6px}
 
 <!-- Photo Grid -->
 <div class="w3-row-padding" style="margin-bottom:128px">
-  <div class="w3-half">
+  <div class="w3-half" style="padding-left:7.5em;">
     <iframe src="https://www.youtube-nocookie.com/embed/A4nxebiG9Qo?modestbranding=1&rel=0" width="533.34em" height=300em frameborder="0"></iframe> 
     <iframe src="https://www.youtube-nocookie.com/embed/Ue5nDs_1UbY?modestbranding=1&rel=0" width=533.34em height=300em frameborder="0"></iframe>
 	  <iframe src="https://www.youtube-nocookie.com/embed/g7BxlXDp6Kk?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
