--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1 {font-family: "Raleway", Arial, sans-serif}
-h1 {letter-spacing: 6px}
+h1 {letter-spacing: 3px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 <body style= "background-color: #e76d80">
@@ -20,7 +20,7 @@ h1 {letter-spacing: 6px}
 <header class=" w3-center" style="padding:128px 16px; margin-bottom:16px; background:linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)
 ), url(./flowerbg.jpg) no-repeat scroll top center; background-size:cover; -webkit-filter:blur(0px); filter:blur(0px); height:calc(80% + 2 * 0px); left:0px; top:0px; width:calc(100% + 2 * 0px)" >
   <h1 class="w3-xlarge" style= "color:#E6E6E6">MOTION GRAPHIC DESIGNER</h1>
-  <h1 style= "color:#FFFFFF">ARUSHI KOTHARI</h1>
+  <h1 style= "color:#FFFFFF"><b>ARUSHI KOTHARI</b></h1>
   
   <div class="w3-padding-32" style= "color:#E6E6E6">
     <div class="w3-bar w3-border" style= "border-color:#E6E6E6 !important">
