--- a/about.html
+++ b/about.html
@@ -33,13 +33,29 @@ h1 {letter-spacing: 3px}
 </header>
 
 <!-- Photo Grid -->
-<div class="w3-row-padding" style="margin-bottom:128px">
-    HI
-    <br>
-    My name is Arushi Kothari and this is my website.
-    <br>
+<div class="w3-row-padding" style="margin-bottom:128px; font-size: 20px; font-family:sans-serif">
+<h1 style= "text-align:center; font-family:sans-serif"> <b>Hello!</b> </h1>
+  I'm just as curious as you are to find out what this page contains. According to me, this page is the most useless page on any website yet the most interesting one as well.
+ <br>To satisfy your curious minds, here we go. <br>
+ <h2 style="color:black; font-family: sans-serif;"> <b> Who am i?</b> </h2> 
+ My name is Arushi Kothari. I am an undergraduate student at Delhi University. I have a really good sense of humour, or at least that is what I like to think. 
+ My hobbies inlude:<br>
+ 1. Sleeping <br>
+ 2. ...*zzz*
+<br>
+<h2 style="color:black; font-family: sans-serif;"> <b>What do i do?</b></h2>
+Nothing<br>
+ <i>Really</i> <br>
+ I am just an average college going kid who likes making videos.<br>
+ <h2 style="color:black; font-family: sans-serif;"> <b> Why did i make this website? </b></h2>
+ I made this website because I wanted a space which I can call mine.<br>
+This website gives me a platform to showcase my work however I want it without worrying about the social standards, the likes & dislikes, the number of comments, followers, etc. 
+It includes my articles from when I first started writing as a 12 year old to the video I first made with the wrong composition settings. 
+<br>
+<h2 style="color:black; font-family: sans-serif;"> <b>How can you contact me? </b></h2>
+ You can write me an Email telling me how much you love/hate me at 
+ <a href="mailto:arushi.kothari26@gmail.com">arushifanbase@arushikothari.com</a>
 
-  
 </div>
 
 <!-- End Page Content -->
@@ -47,9 +63,9 @@ h1 {letter-spacing: 3px}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-xlarge" style= "color:#262b2a"> 
-  <a href="https://www.facebook.com/profile.php?id=100017694828961"><i class="fa fa-facebook-official w3-hover-opacity" style="padding-left: 5em;" style="padding-right: 5em;"></i></a>
+  <a href="https://www.facebook.com/profile.php?id=100017694828961"><i class="fa fa-facebook-official w3-hover-opacity" style="padding-left:relative;" style="padding-right: 5em;"></i></a>
   <a href="https://www.instagram.com/rushiiaa_/"><i class="fa fa-instagram w3-hover-opacity" style="padding-left: 1em;" style="padding-right: 1em;"></i></a>
-  <i class="fa fa-linkedin w3-hover-opacity" style="padding-left: 1em;" style="padding-right: 5em;"></i>
+  
   
 </footer>
 
