--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>Arushi Kothari</title>
+
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,39 +35,132 @@ h1 {letter-spacing: 3px}
 </header>
 
 <!-- Photo Grid -->
-<div class="w3-row-padding" style="margin-bottom:128px">
-  <div class="w3-half" style="padding-left:7.5em;">
-    <iframe src="https://www.youtube-nocookie.com/embed/A4nxebiG9Qo?modestbranding=1&rel=0" width="533.34em" height=300em frameborder="0"></iframe> 
-    <iframe src="https://www.youtube-nocookie.com/embed/Ue5nDs_1UbY?modestbranding=1&rel=0" width=533.34em height=300em frameborder="0"></iframe>
-	  <iframe src="https://www.youtube-nocookie.com/embed/g7BxlXDp6Kk?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/fSHJD9ciJ5o?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/jg1EJJ2DEZY?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/aZsuGb-ukrs?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/UtaiOOCSfIE?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/DAihgWJeHlQ?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-  </div>
-
-  <div class="w3-half">
-    <iframe src="https://www.youtube-nocookie.com/embed/I4f8z6xbt78?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe> 
-    <iframe src="https://www.youtube-nocookie.com/embed/7F6OVMP7P5Y?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-	  <iframe src="https://www.youtube-nocookie.com/embed/AnCjy3jRm30?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/tsbAT3LWm68?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/y787fBkh6DU?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-    <iframe src="https://www.youtube-nocookie.com/embed/VYAInYdN_Ys?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe> 
-    <iframe src="https://www.youtube-nocookie.com/embed/yqzkr-lU6hM?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"></iframe>
-	  
+<div class="w3-row-padding" style="margin-bottom:128px;  ">
+  <div class="w3-half" style="padding-left:relative; padding-top:0.5%;">
+    <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;">
+    <iframe src="https://www.youtube-nocookie.com/embed/CdrHxZS0kws?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+    <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top: 2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/jg1EJJ2DEZY?modestbranding=1&rel=0" width=100% height= "100%" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+    <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/Ue5nDs_1UbY?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0" allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+    <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/fSHJD9ciJ5o?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+    <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/g7BxlXDp6Kk?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+    <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/aZsuGb-ukrs?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+    <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/VYAInYdN_Ys?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+</div>
     
+<div class="w3-half" style="padding-right:relative; padding-top:0.5%;" >
+  <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;">
+   <iframe src="https://www.youtube-nocookie.com/embed/I4f8z6xbt78?modestbranding=1&rel=0"  frameborder="0"allowfullscreen style= "position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;">
+    </iframe>
   </div>
+  <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/7F6OVMP7P5Y?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+  </div>
+  <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/AnCjy3jRm30?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+    </div>
+  <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/tsbAT3LWm68?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+  </div>
+  <div style="position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-top:2%">
+    <iframe src="https://www.youtube-nocookie.com/embed/y787fBkh6DU?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+    </iframe>
+  </div>
+  
+  <div style="position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  margin-top:2%">
+  <iframe src="https://www.youtube-nocookie.com/embed/yqzkr-lU6hM?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+  </iframe>
+  </div>
+  <div style="position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  margin-top:2%">
+  <iframe src="https://www.youtube-nocookie.com/embed/DAihgWJeHlQ?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+  </iframe>
+  </div>
+  <div style="position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  margin-top:2%">
+  <iframe src="https://www.youtube-nocookie.com/embed/UtaiOOCSfIE?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
+  </iframe>
+  </div>
+</div>   
+   
+   
 </div>
 
 <!-- End Page Content -->
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-xlarge" style= "color:#262b2a"> 
-  <a href="https://www.facebook.com/profile.php?id=100017694828961"><i class="fa fa-facebook-official w3-hover-opacity" style="padding-left: 5em;" style="padding-right: 5em;"></i></a>
+<footer class="w3-container w3-padding-64 w3-center w3-xlarge" style= "color:#262b2a; position:relative;"> 
+  <a href="https://www.facebook.com/profile.php?id=100017694828961"><i class="fa fa-facebook-official w3-hover-opacity" style="padding-left:relative;" style="padding-right: 5em;"></i></a>
   <a href="https://www.instagram.com/rushiiaa_/"><i class="fa fa-instagram w3-hover-opacity" style="padding-left: 1em;" style="padding-right: 1em;"></i></a>
-  <i class="fa fa-linkedin w3-hover-opacity" style="padding-left: 1em;" style="padding-right: 5em;"></i>
   
 </footer>
 
