--- a/about.html
+++ b/about.html
@@ -37,17 +37,17 @@ h1 {letter-spacing: 3px}
 <h1 style= "text-align:center; font-family:sans-serif"> <b>Hello!</b> </h1>
   I'm just as curious as you are to find out what this page contains. According to me, this page is the most useless page on any website yet the most interesting one as well.
  <br>To satisfy your curious minds, here we go. <br>
- <h2 style="color:black; font-family: sans-serif;"> <b> Who am i?</b> </h2> 
+ <h2 style="color:black; font-family: sans-serif;"> <b> Who am I?</b> </h2> 
  My name is Arushi Kothari. I am an undergraduate student at Delhi University. I have a really good sense of humour, or at least that is what I like to think. 
  My hobbies inlude:<br>
  1. Sleeping <br>
  2. ...*zzz*
 <br>
-<h2 style="color:black; font-family: sans-serif;"> <b>What do i do?</b></h2>
+<h2 style="color:black; font-family: sans-serif;"> <b>What do I do?</b></h2>
 Nothing<br>
  <i>Really</i> <br>
  I am just an average college going kid who likes making videos.<br>
- <h2 style="color:black; font-family: sans-serif;"> <b> Why did i make this website? </b></h2>
+ <h2 style="color:black; font-family: sans-serif;"> <b> Why did I make this website? </b></h2>
  I made this website because I wanted a space which I can call mine.<br>
 This website gives me a platform to showcase my work however I want it without worrying about the social standards, the likes & dislikes, the number of comments, followers, etc. 
 It includes my articles from when I first started writing as a 12 year old to the video I first made with the wrong composition settings. 
