--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ It includes my articles from when I first started writing as a 12 year old to th
 <br>
 <h2 style="color:black; font-family: sans-serif;"> <b>How can you contact me? </b></h2>
  You can write me an Email telling me how much you love/hate me at 
- <a href="mailto:arushi.kothari26@gmail.com">arushifanbase@arushikothari.com</a>
+ <a href="mailto:arushifanbase@arushikothari.com">arushifanbase@arushikothari.com</a>
 
 </div>
 
