--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Arushi Kothari</title>
-<meta name= "description" content= "Hey there! My name is Arushi Kothari. I am a second year student at Delhi University">
+<head> <meta name= "description" content= "Hey there! My name is Arushi Kothari. I am a second year student at Delhi University"> </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
