Updated about page

--- a/about.html
+++ b/about.html
@@ -34,37 +34,26 @@ h1 {letter-spacing: 3px}
 
 <!-- Photo Grid -->
 <div class="w3-row-padding" style="margin-bottom:128px; font-size: 20px; font-family:sans-serif">
-<h1 style= "text-align:center; font-family:sans-serif"> <b>Hello!</b> </h1>
-  I'm just as curious as you are to find out what this page contains. According to me, this page is the most useless page on any website yet the most interesting one as well.
- <br>To satisfy your curious minds, here we go. <br>
- <h2 style="color:black; font-family: sans-serif;"> <b> Who am I?</b> </h2> 
- My name is Arushi Kothari. I am an undergraduate student at Delhi University. I have a really good sense of humour, or at least that is what I like to think. 
- My hobbies inlude:<br>
- 1. Sleeping <br>
- 2. ...*zzz*
-<br>
-<h2 style="color:black; font-family: sans-serif;"> <b>What do I do?</b></h2>
-Nothing<br>
- <i>Really</i> <br>
- I am just an average college going kid who likes making videos.<br>
- <h2 style="color:black; font-family: sans-serif;"> <b> Why did I make this website? </b></h2>
- I made this website because I wanted a space which I can call mine.<br>
-This website gives me a platform to showcase my work however I want it without worrying about the social standards, the likes & dislikes, the number of comments, followers, etc. 
-It includes my articles from when I first started writing as a 12 year old to the video I first made with the wrong composition settings. 
-<br>
-<h2 style="color:black; font-family: sans-serif;"> <b>How can you contact me? </b></h2>
- You can write me an Email telling me how much you love/hate me at 
- <a href="mailto:arushifanbase@arushikothari.com">arushifanbase@arushikothari.com</a>
+<h1 style= "text-align:left; font-family:Arial, Helvetica, sans-serif"> <div style="padding-left: 0px;"> <b>Hey There!</b> </div></h1>
+<div style="float: left; display: inline; width: 900px; word-wrap: break-word; padding-left: 0px;"><p>My name is Arushi Kothari. I am currently a second year student studying commerce at Delhi University. I would describe myself as a creative individual who loves learning new things and likes to play the ukulele sometimes. </p>
+
+<p>I discovered my interest of video editing back in 10th grade when I volunteered to make a video for a competition. Winning the first prize in the competition boosted my confidence and I went on for more such competitions and positions of responsibilty for the next two years in school. After coming to college, while I was on the path of discovering my true personality, I came to the conclusion that video editing is my favourite hobby but I was still looking for that one thing that I could fall in love with. </p>
+
+<p>I worked in multiple college societies during my first year to find out what I love the most. I stumbled upon the world of Digital Marketing and since then I have liked it so much that I am even planning on pursuing a career in it. I am currently interning at DIGIT BAZAR as a digital marketing intern. </p>
+
+<p>I am looking to grab every opportunity that comes my way and develop myself for the world that awaits. You can view my resume <a href="resume_ArushiKothari.pdf" style="color: blue;">here</a>. <br>
+</P>
+<p>You can contact me at <a href= "mailto:contact@arushikothari.com">contact@arushikothari.com</a>.</p></div><div style="text-align:right;"><img src= "me.jpg"; style="width:400px;height:auto; padding-right: 0px;"></div>
 
 </div>
 
 <!-- End Page Content -->
-</div>
+
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-xlarge" style= "color:#262b2a"> 
-  <a href="https://www.facebook.com/profile.php?id=100017694828961"><i class="fa fa-facebook-official w3-hover-opacity" style="padding-left:relative;" style="padding-right: 5em;"></i></a>
-  <a href="https://www.instagram.com/rushiiaa_/"><i class="fa fa-instagram w3-hover-opacity" style="padding-left: 1em;" style="padding-right: 1em;"></i></a>
+  <a href="https://www.linkedin.com/in/arushi-kothari-859a9b194/"><i class="fa fa-linkedin w3-hover-opacity" style="padding-left:relative;" style="padding-right: 5em;"></i></a>
+  
   
   
 </footer>
