maded about page responsive

--- a/about.html
+++ b/about.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <title>Arushi Kothari</title>
+<head> <meta name= "description" content= "Hey there! My name is Arushi Kothari. I am a second year student at Delhi University"> </head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,22 +13,23 @@ body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 3px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
-<body style= "background-color: #e76d80">
+<body style="background:#e76d80">
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:100em">
+<div class="w3-content" style="max-width:100em; padding-top:0px">
 
 <!-- Header -->
-<header class=" w3-center" style="padding:128px 16px; margin-bottom:16px; background:linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)
+<header class="w3-center" style="padding:128px 16px; margin-bottom:16px; background:linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)
 ), url(./flowerbg.jpg) no-repeat scroll top center; background-size:cover; -webkit-filter:blur(0px); filter:blur(0px); height:calc(80% + 2 * 0px); left:0px; top:0px; width:calc(100% + 2 * 0px)" >
-  <h1 class="w3-xlarge" style= "color:#E6E6E6">MOTION GRAPHIC DESIGNER</h1>
-  <h1 style= "color:#FFFFFF"><b>ARUSHI KOTHARI</b></h1>
+  <h1 class="w3-xlarge" style= "color:#e6e6e6;">MOTION GRAPHIC DESIGNER</h1>
+  <h1 style= "
+  color:#ffffff;"><b>ARUSHI KOTHARI</b></h1>
   
-  <div class="w3-padding-32" style= "color:#E6E6E6">
-    <div class="w3-bar w3-border" style= "border-color:#E6E6E6 !important">
-      <a href="./about.html" class="w3-bar-item w3-button w3-light-grey" >About</a>
-      <a href="./index.html" class="w3-bar-item w3-button">Portfolio</a>
-      <a href="http://blog.arushikothari.com" class="w3-bar-item w3-button">Blog</a>
+  <div class="w3-padding-32" style= "color:#e6e6e6">
+    <div class="w3-bar w3-border" style= "border-color:#e6e6e6 !important">
+      <a href="./about.html" class="w3-bar-item w3-button" >About</a>
+      <a href="./index.html" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
+      <a href="http://blog.arushikothari.com/" class="w3-bar-item w3-button">Blog</a>
       
     </div>
   </div>
@@ -35,7 +38,7 @@ h1 {letter-spacing: 3px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" style="margin-bottom:128px; font-size: 20px; font-family:sans-serif">
 <h1 style= "text-align:left; font-family:Arial, Helvetica, sans-serif"> <div style="padding-left: 0px;"> <b>Hey There!</b> </div></h1>
-<div style="float: left; display: inline; width: 900px; word-wrap: break-word; padding-left: 0px;"><p>My name is Arushi Kothari. I am currently a second year student studying commerce at Delhi University. I would describe myself as a creative individual who loves learning new things and likes to play the ukulele sometimes. </p>
+<div style="float: left; display: inline; word-wrap: break-word; padding-left: 0px;"><p>My name is Arushi Kothari. I am currently a second year student studying commerce at Delhi University. I would describe myself as a creative individual who loves learning new things and likes to play the ukulele sometimes. </p>
 
 <p>I discovered my interest of video editing back in 10th grade when I volunteered to make a video for a competition. Winning the first prize in the competition boosted my confidence and I went on for more such competitions and positions of responsibilty for the next two years in school. After coming to college, while I was on the path of discovering my true personality, I came to the conclusion that video editing is my favourite hobby but I was still looking for that one thing that I could fall in love with. </p>
 
@@ -43,7 +46,7 @@ h1 {letter-spacing: 3px}
 
 <p>I am looking to grab every opportunity that comes my way and develop myself for the world that awaits. You can view my resume <a href="resume_ArushiKothari.pdf" style="color: blue;">here</a>. <br>
 </P>
-<p>You can contact me at <a href= "mailto:contact@arushikothari.com">contact@arushikothari.com</a>.</p></div><div style="text-align:right;"><img src= "me.jpg"; style="width:400px;height:auto; padding-right: 0px;"></div>
+<p>You can contact me at <a href= "mailto:contact@arushikothari.com">contact@arushikothari.com</a>.</p></div>
 
 </div>
 
