--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@ h1 {letter-spacing: 3px}
   
   <div class="w3-padding-32" style= "color:#e6e6e6">
     <div class="w3-bar w3-border" style= "border-color:#e6e6e6 !important">
-      <a href="./about.html" class="w3-bar-item w3-button" >About</a>
-      <a href="./index.html" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
+      <a href="./about.html" class="w3-bar-item w3-button w3-light-grey" >About</a>
+      <a href="./index.html" class="w3-bar-item w3-button">Portfolio</a>
       <a href="http://blog.arushikothari.com/" class="w3-bar-item w3-button">Blog</a>
       
     </div>
@@ -44,7 +44,7 @@ h1 {letter-spacing: 3px}
 
 <p>I worked in multiple college societies during my first year to find out what I love the most. I stumbled upon the world of Digital Marketing and since then I have liked it so much that I am even planning on pursuing a career in it. I am currently interning at DIGIT BAZAR as a digital marketing intern. </p>
 
-<p>I am looking to grab every opportunity that comes my way and develop myself for the world that awaits. You can view my resume <a href="resume_ArushiKothari.pdf" style="color: blue;">here</a>. <br>
+<p>I am looking to grab every opportunity that comes my way and develop myself for the world that awaits. You can view my resume <a href="Resume_ArushiKothari.pdf" style="color: blue;">here</a>. <br>
 </P>
 <p>You can contact me at <a href= "mailto:contact@arushikothari.com">contact@arushikothari.com</a>.</p></div>
 
