added picture on about page

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ h1 {letter-spacing: 3px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" style="margin-bottom:128px; font-size: 20px; font-family:sans-serif">
 <h1 style= "text-align:left; font-family:Arial, Helvetica, sans-serif"> <div style="padding-left: 0px;"> <b>Hey There!</b> </div></h1>
-<div style="float: left; display: inline; word-wrap: break-word; padding-left: 0px;"><p>My name is Arushi Kothari. I am currently a second year student studying commerce at Delhi University. I would describe myself as a creative individual who loves learning new things and likes to play the ukulele sometimes. </p>
+<div><img src= "me.jpg" style="float: right; width: 30%; padding-left: 2%;"> <div style="padding-right: 5%;"><p>My name is Arushi Kothari. I am currently a second year student studying commerce at Delhi University. I would describe myself as a creative individual who loves learning new things and likes to play the ukulele sometimes. </p>
 
 <p>I discovered my interest of video editing back in 10th grade when I volunteered to make a video for a competition. Winning the first prize in the competition boosted my confidence and I went on for more such competitions and positions of responsibilty for the next two years in school. After coming to college, while I was on the path of discovering my true personality, I came to the conclusion that video editing is my favourite hobby but I was still looking for that one thing that I could fall in love with. </p>
 
@@ -46,7 +46,7 @@ h1 {letter-spacing: 3px}
 
 <p>I am looking to grab every opportunity that comes my way and develop myself for the world that awaits. You can view my resume <a href="Resume_ArushiKothari.pdf" style="color: blue;">here</a>. <br>
 </P>
-<p>You can contact me at <a href= "mailto:contact@arushikothari.com">contact@arushikothari.com</a>.</p></div>
+<p>You can contact me at <a href= "mailto:contact@arushikothari.com">contact@arushikothari.com</a>.</p></div></div></div>
 
 </div>
 
