--- a/index.html
+++ b/index.html
@@ -1,177 +1,14 @@
-<!DOCTYPE html>
-<html>
-<title>Arushi Kothari</title>
-<head> <meta name= "description" content= "Hey there! My name is Arushi Kothari. I am a second year student at Delhi University"> </head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+---
+layout: matrix
+---
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1 {font-family: "Raleway", Arial, sans-serif}
-h1 {letter-spacing: 3px}
-.w3-row-padding img {margin-bottom: 12px}
-</style>
-<body style="background:#e76d80">
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:100em; padding-top:0px">
-
-<!-- Header -->
-<header class="w3-center" style="padding:128px 16px; margin-bottom:16px; background:linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)
-), url(./flowerbg.jpg) no-repeat scroll top center; background-size:cover; -webkit-filter:blur(0px); filter:blur(0px); height:calc(80% + 2 * 0px); left:0px; top:0px; width:calc(100% + 2 * 0px)" >
-  <h1 class="w3-xlarge" style= "color:#e6e6e6;">MOTION GRAPHIC DESIGNER</h1>
-  <h1 style= "
-  color:#ffffff;"><b>ARUSHI KOTHARI</b></h1>
-  
-  <div class="w3-padding-32" style= "color:#e6e6e6">
-    <div class="w3-bar w3-border" style= "border-color:#e6e6e6 !important">
-      <a href="./about.html" class="w3-bar-item w3-button" >About</a>
-      <a href="./index.html" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
-      <a href="http://blog.arushikothari.com/" class="w3-bar-item w3-button">Blog</a>
-      
-    </div>
+<div>
+  {% for post in site.posts %}
+  <div class="row clearfix">
+    <img class="{% cycle 'right', 'left' %}" src="{{ post.image }}" height="200px"/>
+    <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+    {{ post.date | date: "%-d %B %Y"}}
+    <p>{{ post.excerpt }}</p>
   </div>
-</header>
-
-<!-- Photo Grid -->
-<div class="w3-row-padding" style="margin-bottom:128px;  ">
-  <div class="w3-half" style="padding-left:relative; padding-top:0.5%;">
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;">
-    <iframe src="https://www.youtube-nocookie.com/embed/MK3nR2T3MJw?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top: 2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/jg1EJJ2DEZY?modestbranding=1&rel=0" width=100% height= "100%" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/eWrGFNUSKU0?modestbranding=1&rel=0" width=100% height= "100%" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/GT9f5VUHiew?modestbranding=1&rel=0" width=100% height= "100%" frameborder="0" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/Ue5nDs_1UbY?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0" allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/fSHJD9ciJ5o?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/g7BxlXDp6Kk?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/aZsuGb-ukrs?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-    <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/VYAInYdN_Ys?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
+  {% endfor %}
 </div>
-    
-<div class="w3-half" style="padding-right:relative; padding-top:0.5%;" >
-  <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;">
-   <iframe src="https://www.youtube-nocookie.com/embed/CdrHxZS0kws?modestbranding=1&rel=0"  frameborder="0"allowfullscreen style= "position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;">
-    </iframe>
-  </div>
-  <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/I4f8z6xbt78?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-  </div>
-
-  <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/7F6OVMP7P5Y?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-  </div>
-  <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/AnCjy3jRm30?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-    </div>
-  <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/tsbAT3LWm68?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-  </div>
-  <div style="position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top:2%">
-    <iframe src="https://www.youtube-nocookie.com/embed/y787fBkh6DU?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-    </iframe>
-  </div>
-  
-  <div style="position: relative;
-  overflow: hidden;
-  padding-top: 56.25%;
-  margin-top:2%">
-  <iframe src="https://www.youtube-nocookie.com/embed/yqzkr-lU6hM?modestbranding=1&rel=0" width="533.34em" height="300em" frameborder="0"allowfullscreen style="position: absolute; top: 0.5%; left: 0; width: 100%; height: 100%; border: 0;">
-  </iframe>
-  </div>
-  
-  
-   
-</div>
-
-<!-- End Page Content -->
-</div>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-xlarge" style= "color:#262b2a; position:relative;"> 
-  <a href="https://www.facebook.com/profile.php?id=100017694828961"><i class="fa fa-facebook-official w3-hover-opacity" style="padding-left:relative;" style="padding-right: 5em;"></i></a>
-  <a href="https://www.instagram.com/rushiiaa_/"><i class="fa fa-instagram w3-hover-opacity" style="padding-left: 1em;" style="padding-right: 1em;"></i></a>
-  
-</footer>
-
-</body>
-</html>
